--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,8 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">I have no clue what I'm doing.</p>
+    <h1>Test JL</h1>
+    <p class="lead">I have no clue what I'm doing.
+    So why not go back to connect?
+    </p>
+    <p><a class="btn btn-default" href="https://connect.cppintra.net/nl">;</a></p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
