--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="jumbotron">
     <h1>Test JL</h1>
     <p class="lead">I have no clue what I'm doing.
-    So why not go back to ?
+    So why not go back to
     </p>
-    <p><a class="btn btn-default" href="https://connect.cppintra.net/nl"> connect;</a></p>
+    <p><a class="btn btn-default" href="https://connect.cppintra.net/nl">connect? &raquo;</a></p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
