--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Test JL</h1>
+    <h1>Just a minimal TLS version test</h1>
     <p class="lead">I have no clue what I'm doing.
-    So why not go back to
+    So why don't you go back to
     </p>
     <p><a class="btn btn-default" href="https://connect.cppintra.net/nl">connect? &raquo;</a></p>
 </div>
